[gd_scene load_steps=4 format=1]

[ext_resource path="res://game/single_game_panel/single_game_panel.gd" type="Script" id=1]
[ext_resource path="res://game/game_panel/game_panel.tscn" type="PackedScene" id=2]
[ext_resource path="res://game/info_panel/info_panel_left.tscn" type="PackedScene" id=3]

[node name="single_game_panel" type="Node2D"]

script/script = ExtResource( 1 )

[node name="game_panel_p1" parent="." instance=ExtResource( 2 )]

[node name="info_panel_p1" parent="." instance=ExtResource( 3 )]

transform/pos = Vector2( 240, 0 )

[connection signal="game_ended" from="game_panel_p1" to="." method="_on_game_panel_p1_game_ended"]

[connection signal="score" from="game_panel_p1" to="." method="_on_game_panel_p1_score"]


